feat: credential issuance history: remove profile version from URL
